--- a/bookcycle-app/package.json
+++ b/bookcycle-app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.81.0",
     "firebase": "^12.5.0",
+    "geolib": "^3.3.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
