--- a/bookcycle-app/package.json
+++ b/bookcycle-app/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.5.0",
     "geolib": "^3.3.4",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
   },
